{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 62,
  "lineage": "2d59a0ab-52fa-f3e1-3d3b-4c24a5617f15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746491203215:internet-gateway/igw-0821487f150bf0445",
            "id": "igw-0821487f150bf0445",
            "owner_id": "746491203215",
            "tags": {
              "Name": "fleetpulse-igw",
              "Project": "FleetPulse"
            },
            "tags_all": {
              "Name": "fleetpulse-igw",
              "Project": "FleetPulse"
            },
            "vpc_id": "vpc-04d7f894120c73fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746491203215:route-table/rtb-072e00e538c813429",
            "id": "rtb-072e00e538c813429",
            "owner_id": "746491203215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0821487f150bf0445",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fleetpulse-public-rt",
              "Project": "FleetPulse"
            },
            "tags_all": {
              "Name": "fleetpulse-public-rt",
              "Project": "FleetPulse"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d7f894120c73fd1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021910dd382e35142",
            "route_table_id": "rtb-072e00e538c813429",
            "subnet_id": "subnet-0c61a53540daedbbc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e273acd45ec61ad2",
            "route_table_id": "rtb-072e00e538c813429",
            "subnet_id": "subnet-0beaf079a186eff2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746491203215:security-group/sg-09201aa2c55c30e3c",
            "description": "FleetPulse main security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09201aa2c55c30e3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fleetpulse-sg",
            "name_prefix": "",
            "owner_id": "746491203215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fleetpulse-sg",
              "Project": "FleetPulse"
            },
            "tags_all": {
              "Name": "fleetpulse-sg",
              "Project": "FleetPulse"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d7f894120c73fd1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746491203215:subnet/subnet-0c61a53540daedbbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c61a53540daedbbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746491203215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleetpulse-public-1",
              "Project": "FleetPulse"
            },
            "tags_all": {
              "Name": "fleetpulse-public-1",
              "Project": "FleetPulse"
            },
            "vpc_id": "vpc-04d7f894120c73fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746491203215:subnet/subnet-0beaf079a186eff2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beaf079a186eff2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746491203215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleetpulse-public-2",
              "Project": "FleetPulse"
            },
            "tags_all": {
              "Name": "fleetpulse-public-2",
              "Project": "FleetPulse"
            },
            "vpc_id": "vpc-04d7f894120c73fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746491203215:vpc/vpc-04d7f894120c73fd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a2d910f516c20cd",
            "default_route_table_id": "rtb-05ce0c1409d323655",
            "default_security_group_id": "sg-0caebcace1cfe465f",
            "dhcp_options_id": "dopt-0a0b81fe22178ea83",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d7f894120c73fd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ce0c1409d323655",
            "owner_id": "746491203215",
            "tags": {
              "Name": "fleetpulse-vpc",
              "Project": "FleetPulse"
            },
            "tags_all": {
              "Name": "fleetpulse-vpc",
              "Project": "FleetPulse"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}